--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-main{
-  margin: 0;
-  padding: 0;
-  display: block;
+*{
+  padding:0;
+  margin:0;
+  box-sizing:border-box;
 }
 .port0 {
   font-family: "Roboto Mono", monospace;
